--- a/style.css
+++ b/style.css
@@ -12,9 +12,12 @@ ul {
     padding: 0;
 }
 
-img {
-    
+/* для картинок данного класса задали свойства */
+.preset__store-grid img {
+    width: 100%;
+    height: auto;
 }
+
 body {
     background-color: white;
     margin: 0;
@@ -67,6 +70,7 @@ a {
     align-items: center;
 }
 ul.list__menu li {
+    display: none;
     display: inline;
     margin-left: 10px;
 }
@@ -97,7 +101,7 @@ ul.list__menu li:last-child {
 }
 .mirro__photo {
     background-color: #F4F3F0;
-    padding-bottom: 100px;
+    border-radius: 20px;
 }
 .mirro__photo-flex {
     display: flex;
@@ -145,9 +149,13 @@ ul.list__menu li:last-child {
 }
 .services__grid {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    /* grid-template-columns: repeat(3, 1fr); */
+    /* grid-template-rows: repeat(3, 1fr); */
     gap: 16px;
+}
+.services__grid-item {
+    max-width: 379px;
 }
  .grid__icon {
     padding: 12px 12px;
@@ -174,9 +182,6 @@ ul.list__menu li:last-child {
 .arrow {
     margin-left: 10px
 }
-.services__grid-item {
-    max-width: 379px;
-}
 .background__item {
     background-color: #F4F3F0;
     border-radius: 16px;
@@ -194,6 +199,7 @@ ul.list__menu li:last-child {
 }
 .preset__store {
     background-color:  #F4F3F0;
+    border-radius: 20px;
 }
 .fill__two {
     padding-top: 100px;
@@ -210,30 +216,24 @@ ul.list__menu li:last-child {
 }
 .preset__store-grid {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 16px;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 16px; 
 }
-.obf {
-    max-width: 100%;
-    max-height: 100%;
-    object-fit: cover;
-}
-
 .text__h3-item {
+    padding-bottom: 6px;
     padding-left: 30px;
     padding-top: 30px;
+    background: #fff;
 }
 .text__p-item {
-    margin-top: 6px;
-    padding: 0 30px 26px;
-}
-.preset__background {
-    width: 379px;
-    min-height: 180px;
-    background-color: white;
+    min-height: 130px;
+    padding: 0 30px 0px;
+    background: #fff;
     border-bottom-left-radius: 16px;
     border-bottom-right-radius: 16px;
+    color: var(--darkgreen-color);
 }
+
 .preset__store-arrow {
     color: var(--darkgreen-color);
     margin-top: 30px;
@@ -285,6 +285,7 @@ ul.list__menu li:last-child {
 .input__grid {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
+    gap: 1em;
 }
 .title {
     font-size: 14px;
@@ -349,4 +350,183 @@ form {
 }
 .footer__icon:last-child {
     margin-right: 0;
+}
+
+@media screen and (max-width: 1176px) {
+    .input__grid {
+        grid-template-columns: repeat(3, 1fr);
+        padding-left: 100px;
+        grid-row: 1/3
+    }
+    .services__grid {
+        padding: 0 15px 0 10px;
+    }
+    .preset__store-grid {
+        padding: 0 15px;
+    }
+    .mirro__white {
+        padding: 50px 0 30px 0;
+    }
+    .mirro__white img {
+        width: 100px;
+        height: 30px;
+    }
+    .footer__flex {
+        padding: 0 15px;
+    }
+}
+
+@media screen and (max-width: 1075px) {
+    .header__flex {
+        padding: 0 15px;
+    }
+    .mirro__photo {
+        padding: 0 15px;
+    }
+    .services__grid {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 10px;
+        justify-items: center;
+    }
+    .background__item {
+        width: 400px;
+        height: 300px;
+    }
+    .preset__store-grid {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .footer__flex {
+        padding: 0 15px;
+    }
+    .input__grid {
+        grid-template-columns: repeat(2, 1fr);
+        padding-right: 25px;
+    }
+    input[type="search"] {
+        width: 300px;
+    }
+}
+
+@media screen and (max-width: 820px) {
+    .text-h1 {
+        font-size: 30px;
+    }
+    .mirro__text {
+        width: 250px; 
+    }
+    .preset__store-grid {
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+    .background__item {
+        width: 350px;
+        height: 310px;
+    }
+}
+
+@media screen and (max-width: 414px) {
+    .list__menu {
+        display: none;
+    }
+    .flex__item-left {
+        padding-bottom: 15px;
+    }
+    .read__more {
+        width: 110;
+        height: 30;
+    }
+    .mirro__photo-flex {
+        flex-wrap: wrap;
+    }
+    .mirro__text {
+        width: 380px;
+        text-align: justify;
+        text-indent: 20px;
+    }
+    .text-h1 {
+        text-align: center;
+    }
+    .button__read-more {
+        text-align: center;
+        padding: 10px 0;
+    }
+    .fill {
+        padding-top: 50px;
+    }
+    br.br__none {
+        display: none;
+    }
+    .text__description {
+        margin: 0 8px 47px;
+    }
+    .services__grid {
+        grid-template-columns: repeat(1, 1fr);
+        gap: 10px;
+        padding: 0 10px;
+    }
+    .services {
+        padding-bottom: 50px;
+    }
+    .fill__two {
+        padding-top: 50px;
+    }
+    .text__description-two {
+        margin: 0 8px 47px;
+    }
+    .preset__store-grid {
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .preset__store-arrow {
+        padding-bottom: 30px;
+    }
+    .contact__flex {
+        align-items: center;
+    }
+    .text__contact {
+        width: 250px;
+        text-align: justify;
+        text-transform: uppercase;
+        font-size: 16px;
+        line-height: 23px;
+        padding: 86px 50px 80px 55px;
+    }
+    .input__grid {
+        /* grid-template-columns: repeat(2, 1fr); */
+        /* grid-template-rows: repeat(2, 1fr); */
+        padding: 0 10px;
+    }
+    .mirro__white {
+        padding: 30px 0;
+    }
+    .submit-4 {
+        grid-column: 1/3;
+        order: -1;
+    }
+    input[type="search"] {
+        width: 370px;
+    }
+    .list {
+        font-size: 12px;
+        line-height: 18px;
+    }
+    .title {
+        font-size: 14px;
+        line-height: 20px;
+        letter-spacing: 2px;
+        text-transform: uppercase;
+        color: var(--brown-color);
+    }
+    .footer__flex {
+        align-items: flex-end;
+    }
+    .footer__left {
+        font-size: 10;
+        line-height: 22px;
+        color: #fff;
+    }
+    img.footer__icon {
+        max-width: 15px;
+        max-height: 15px;
+        margin: 0 auto;
+    }
 }
