--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
 html {
+    width: 100%;
+    max-width: 100%;
+    overflow-x: hidden;
     box-sizing: border-box;
 }
 *, *::before, *::after {
@@ -19,6 +22,9 @@ ul {
 }
 
 body {
+    width: 100%;
+    max-width: 100%;
+    overflow-x: hidden;
     background-color: white;
     margin: 0;
     padding: 0;
@@ -424,6 +430,113 @@ form {
     }
 }
 
+@media screen and (max-width: 425px) {
+    .list__menu {
+        display: none;
+    }
+    .flex__item-left {
+        padding-bottom: 15px;
+    }
+    .read__more {
+        width: 110;
+        height: 30;
+    }
+    .mirro__photo-flex {
+        flex-wrap: wrap;
+    }
+    .mirro__text {
+        width: 380px;
+        text-align: justify;
+        text-indent: 20px;
+    }
+    .text-h1 {
+        text-align: center;
+    }
+    .button__read-more {
+        text-align: center;
+        padding: 10px 0;
+    }
+    .fill {
+        padding-top: 50px;
+    }
+    br.br__none {
+        display: none;
+    }
+    .text__description {
+        margin: 0 8px 47px;
+    }
+    .services__grid {
+        grid-template-columns: repeat(1, 1fr);
+        gap: 10px;
+        padding: 0 10px;
+    }
+    .services {
+        padding-bottom: 50px;
+    }
+    .fill__two {
+        padding-top: 50px;
+    }
+    .text__description-two {
+        margin: 0 8px 47px;
+    }
+    .preset__store-grid {
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .preset__store-arrow {
+        padding-bottom: 30px;
+    }
+    .contact__flex {
+        align-items: center;
+    }
+    .text__contact {
+        width: 250px;
+        text-align: justify;
+        text-transform: uppercase;
+        font-size: 16px;
+        line-height: 23px;
+        padding: 86px 50px 80px 55px;
+    }
+    .input__grid {
+        /* grid-template-columns: repeat(2, 1fr); */
+        /* grid-template-rows: repeat(2, 1fr); */
+        padding: 0 10px;
+    }
+    .mirro__white {
+        padding: 30px 0;
+    }
+    .submit-4 {
+        grid-column: 1/3;
+        order: -1;
+    }
+    input[type="search"] {
+        width: 370px;
+    }
+    .list {
+        font-size: 12px;
+        line-height: 18px;
+    }
+    .title {
+        font-size: 14px;
+        line-height: 20px;
+        letter-spacing: 2px;
+        text-transform: uppercase;
+        color: var(--brown-color);
+    }
+    .footer__flex {
+        align-items: flex-end;
+    }
+    .footer__left {
+        font-size: 10;
+        line-height: 22px;
+        color: #fff;
+    }
+    img.footer__icon {
+        max-width: 15px;
+        max-height: 15px;
+        margin: 0 auto;
+    }
+}
+
 @media screen and (max-width: 414px) {
     .list__menu {
         display: none;
@@ -518,6 +631,115 @@ form {
     }
     .footer__flex {
         align-items: flex-end;
+    }
+    .footer__left {
+        font-size: 10;
+        line-height: 22px;
+        color: #fff;
+    }
+    img.footer__icon {
+        max-width: 15px;
+        max-height: 15px;
+        margin: 0 auto;
+    }
+}
+
+@media screen and (max-width: 375px) {
+    .list__menu {
+        display: none;
+    }
+    .flex__item-left {
+        padding-bottom: 15px;
+    }
+    .read__more {
+        width: 110;
+        height: 30;
+    }
+    .mirro__photo-flex {
+        flex-wrap: wrap;
+    }
+    .mirro__text {
+        width: 343px;
+        text-align: justify;
+        text-indent: 20px;
+    }
+    .text-h1 {
+        font-size: 25px;
+        text-align: center;
+    }
+    .button__read-more {
+        text-align: center;
+        padding: 10px 0;
+    }
+    .fill {
+        padding-top: 50px;
+    }
+    br.br__none {
+        display: none;
+    }
+    .text__description {
+        margin: 0 8px 47px;
+    }
+    .services__grid {
+        grid-template-columns: repeat(1, 1fr);
+        gap: 10px;
+        padding: 0 10px;
+    }
+    .services {
+        padding-bottom: 50px;
+    }
+    .fill__two {
+        padding-top: 50px;
+    }
+    .text__description-two {
+        margin: 0 8px 47px;
+    }
+    .preset__store-grid {
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .preset__store-arrow {
+        padding-bottom: 30px;
+    }
+    .contact__flex {
+        align-items: center;
+    }
+    .text__contact {
+        width: 250px;
+        text-align: justify;
+        text-transform: uppercase;
+        font-size: 16px;
+        line-height: 23px;
+        padding: 86px 50px 80px 55px;
+    }
+    .input__grid {
+        /* grid-template-columns: repeat(2, 1fr); */
+        /* grid-template-rows: repeat(2, 1fr); */
+        padding: 0 10px;
+    }
+    .mirro__white {
+        padding: 30px 0;
+    }
+    .submit-4 {
+        grid-column: 1/3;
+        order: -1;
+    }
+    input[type="search"] {
+        width: 355px;
+    }
+    .list {
+        font-size: 12px;
+        line-height: 18px;
+    }
+    .title {
+        font-size: 14px;
+        line-height: 20px;
+        letter-spacing: 2px;
+        text-transform: uppercase;
+        color: var(--brown-color);
+    }
+    .footer__flex {
+        flex-wrap: wrap;
+        justify-content: space-around;
     }
     .footer__left {
         font-size: 10;
